Fix scrollbar theming quirks

--- a/src/index.css
+++ b/src/index.css
@@ -14,6 +14,8 @@ html {
 
   --background: white;
   --color: black;
+
+  scrollbar-color: gray var(--background);
 }
 
 body {
